--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,12 @@
 {
-  "name": "Sølvpris – 100 g i DKK",
+  "name": "Sølv – 100 g i DKK",
   "short_name": "Sølvpris",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#050611",
-  "theme_color": "#050611",
+  "theme_color": "#060814",
   "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
+    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
